--- a/setup/monitoring/docker-compose.yaml
+++ b/setup/monitoring/docker-compose.yaml
@@ -1,7 +1,8 @@
 version: "3"
 
 networks:
-  loki:
+  adaptor-net:
+    external: true
 
 services:
   loki:
@@ -12,7 +13,7 @@ services:
       - ./loki/local-config.yaml:/etc/loki/local-config.yaml
     command: -config.file=/etc/loki/local-config.yaml
     networks:
-      - loki
+      - adaptor-net
 
   promtail:
     image: grafana/promtail:2.0.0
@@ -21,7 +22,7 @@ services:
       - ./promtail/docker-config.yml:/etc/promtail/config.yml
     command: -config.file=/etc/promtail/config.yml
     networks:
-      - loki
+      - adaptor-net
 
   prometheus:
     image: prom/prometheus:v2.22.1
@@ -32,11 +33,11 @@ services:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - ./prometheus/flink.rules.yml:/etc/prometheus/flink.rules.yml
     networks:
-      - loki
+      - adaptor-net
 
   grafana:
     image: grafana/grafana:latest
     ports:
       - "3000:3000"
     networks:
-      - loki
+      - adaptor-net
