--- a/setup/flink-kubernetes/minio/temp-minio-ingress.yaml
+++ b/setup/flink-kubernetes/minio/temp-minio-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: minio-ingress
+  name: adaptor-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
