--- a/configs/config-example.json
+++ b/configs/config-example.json
@@ -6,11 +6,11 @@
 			"ssl": false,
 			"port": 8080,
 			"ip": "127.0.0.1",
-			"keystorePath": "configs/keystore.jks",
+			"keystorePath": "./configs/keystore.jks",
 			"keystorePassword": "password",
 			"verticleInstances": 1,
-			"jarOutPath": "../upload-jar",
-			"quartzPropertiesPath": "../configs/quartz.test.properties",
+			"jarOutPath": "./upload-jar",
+			"quartzPropertiesPath": "./configs/quartz.test.properties",
 			"adminAuth": {
 				"username": "admin",
 				"password": "admin"
@@ -21,15 +21,15 @@
 			"verticleInstances": 1,
 			"flinkOptions": {
 				"port": 8081,
-				"host": "127.0.0.1",
+				"host": "jobmanager",
 				"ssl": false,
 				"timeout": 10000
 			}
 		},
 		{
 			"id": "in.org.iudx.adaptor.server.codegeninit.CodegenInitVerticle",
-			"templatePath": "../template",
-			"jarOutPath": "../upload-jar",
+			"templatePath": "./template",
+			"jarOutPath": "./upload-jar",
 			"verticleInstances": 1
 		},
 		{
@@ -37,7 +37,7 @@
 			"verticleInstances": 1,
 			"databaseUser": "root",
 			"databasePassword": "adaptor@db",
-			"databseHost": "127.0.0.1",
+			"databseHost": "postgres",
 			"databasePort": 5432,
 			"databaseName": "iudx-adaptor",
 			"databasePoolSize": 5
