--- a/setup/flink/Dockerfile114
+++ b/setup/flink/Dockerfile114
@@ -6,6 +6,26 @@ RUN git clone https://github.com/rraks/bahir-flink.git \
 
 FROM flink:1.14.3-scala_2.12-java11
 
+# install python3: it has updated Python to 3.9 in Debian 11 and so install Python 3.7 from source
+# it currently only supports Python 3.6, 3.7 and 3.8 in PyFlink officially.
+RUN apt clean && apt update -y && \
+apt install -y build-essential libssl-dev zlib1g-dev libbz2-dev libffi-dev && \
+wget https://www.python.org/ftp/python/3.7.9/Python-3.7.9.tgz && \
+tar -xvf Python-3.7.9.tgz && \
+cd Python-3.7.9 && \
+./configure --without-tests --enable-shared && \
+make -j6 && \
+make install && \
+ldconfig /usr/local/lib && \
+cd .. && rm -f Python-3.7.9.tgz && rm -rf Python-3.7.9 && \
+ln -s /usr/local/bin/python3 /usr/local/bin/python && \
+apt clean && \
+rm -rf /var/lib/apt/lists/*
+
+# install PyFlink
+COPY apache-flink*.tar.gz /
+RUN pip3 install /apache-flink-libraries*.tar.gz && pip3 install /apache-flink*.tar.gz
+
 RUN mkdir /opt/flink/plugins/s3 \
     && curl https://repo1.maven.org/maven2/org/apache/flink/flink-s3-fs-presto/1.14.3/flink-s3-fs-presto-1.14.3.jar --output /opt/flink/plugins/s3/flink-s3-fs-presto-1.14.3.jar
 
