--- a/setup/flink/docker-compose114.yml
+++ b/setup/flink/docker-compose114.yml
@@ -7,7 +7,6 @@ networks:
 services:
 
   jobmanager:
-    # image: flink:1.12.2-scala_2.12-java11
     build: 
       dockerfile: ./Dockerfile114
       context: .
@@ -18,7 +17,7 @@ services:
       - "TZ=Asia/Kolkata"
     networks:
       - adaptor-net
-    command: "/opt/flink/bin/jobmanager.sh start-foreground"
+    command: "jobmanager"
     env_file:
       - ./env
     volumes:
@@ -27,7 +26,6 @@ services:
 
 
   taskmanager:
-    # image: flink:1.12.2-scala_2.12-java11 
     build: 
       dockerfile: ./Dockerfile114
       context: .
@@ -38,7 +36,7 @@ services:
       - "TZ=Asia/Kolkata"
     networks:
       - adaptor-net
-    command: "/opt/flink/bin/taskmanager.sh start-foreground"
+    command: "jobmanager"
     restart: always
 
 volumes:
