--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,9 @@ $RECYCLE.BIN/
 .idea/
 iudx.catalogue.server.iml
 
+# VSCode
+.vscode/
+
 # End of https://www.gitignore.io/api/git,java,maven,eclipse,windows
 1. A butt or mark to shoot at, as for practice, or to test the accuracy of a firearm, or the force of a projectile.
 2. A goal or objective.
