--- a/setup/flink-kubernetes/Flink114Dockerfile/Dockerfile
+++ b/setup/flink-kubernetes/Flink114Dockerfile/Dockerfile
@@ -4,22 +4,36 @@ RUN git clone https://github.com/rraks/bahir-flink.git \
     && mvn -DskipTests clean install
 
 
-FROM flink:1.13.1-scala_2.12-java11
+FROM flink:1.14.3-scala_2.12-java11
 
-RUN curl https://dist.apache.org/repos/dist/release/flink/flink-1.14.2/flink-1.14.2-bin-scala_2.11.tgz --output /opt/flink.tgz \
-    && cd /opt \ 
-    && rm -rf flink \
-    && tar -xvf flink.tgz \
-    && mv flink-1.14.2/ flink
+# install python3: it has updated Python to 3.9 in Debian 11 and so install Python 3.7 from source
+# it currently only supports Python 3.6, 3.7 and 3.8 in PyFlink officially.
+RUN apt clean && apt update -y && \
+apt install -y build-essential libssl-dev zlib1g-dev libbz2-dev libffi-dev && \
+wget https://www.python.org/ftp/python/3.7.9/Python-3.7.9.tgz && \
+tar -xvf Python-3.7.9.tgz && \
+cd Python-3.7.9 && \
+./configure --without-tests --enable-shared && \
+make -j6 && \
+make install && \
+ldconfig /usr/local/lib && \
+cd .. && rm -f Python-3.7.9.tgz && rm -rf Python-3.7.9 && \
+ln -s /usr/local/bin/python3 /usr/local/bin/python && \
+apt clean && \
+rm -rf /var/lib/apt/lists/*
+
+# install PyFlink
+COPY apache-flink*.tar.gz /
+RUN pip3 install /apache-flink-libraries*.tar.gz && pip3 install /apache-flink*.tar.gz
 
 RUN mkdir /opt/flink/plugins/s3 \
-    && curl https://repo1.maven.org/maven2/org/apache/flink/flink-s3-fs-presto/1.13.1/flink-s3-fs-presto-1.13.1.jar --output /opt/flink/plugins/s3/flink-s3-fs-presto-1.13.1.jar 
+    && curl https://repo1.maven.org/maven2/org/apache/flink/flink-s3-fs-presto/1.14.3/flink-s3-fs-presto-1.14.3.jar --output /opt/flink/plugins/s3/flink-s3-fs-presto-1.14.3.jar
 
 RUN mkdir /opt/flink/plugins/rmq \
-    && curl https://repo1.maven.org/maven2/org/apache/flink/flink-connector-rabbitmq_2.12/1.13.1/flink-connector-rabbitmq_2.12-1.13.1.jar --output /opt/flink/plugins/rmq/flink-connector-rabbitmq_2.12-1.13.1.jar 
+    && curl https://repo1.maven.org/maven2/org/apache/flink/flink-connector-rabbitmq_2.12/1.14.3/flink-connector-rabbitmq_2.12-1.14.3.jar --output /opt/flink/plugins/rmq/flink-connector-rabbitmq_2.12-1.14.3.jar
 
 RUN mkdir /opt/flink/plugins/kudu \
-    && curl https://repo1.maven.org/maven2/org/apache/kudu/kudu-client/1.14.0/kudu-client-1.14.0.jar --output /opt/flink/plugins/kudu/kudu-client-1.14.0.jar
+    && curl https://repo1.maven.org/maven2/org/apache/kudu/kudu-client/1.14.3/kudu-client-1.14.3.jar --output /opt/flink/plugins/kudu/kudu-client-1.14.3.jar
 COPY --from=deps /root/.m2/repository/org/apache/bahir/flink-connector-kudu_2.11/1.1-SNAPSHOT/flink-connector-kudu_2.11-1.1-SNAPSHOT.jar /opt/flink/plugins/kudu/
 
 RUN mkdir /opt/flink/plugins/fasterxml \
