Remove temp minio ingress

--- a/setup/flink-kubernetes/server/adaptor-server/values.yaml
+++ b/setup/flink-kubernetes/server/adaptor-server/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: krithikvaidya/adaptor-server:latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 service:
   type: NodePort
