--- a/setup/flink-kubernetes/ingress/ingress.yaml
+++ b/setup/flink-kubernetes/ingress/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: adaptor-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     # - host: flink-deployment # http://flink-deployment
