--- a/setup/flink-kubernetes/minio/deployment.yaml
+++ b/setup/flink-kubernetes/minio/deployment.yaml
@@ -18,19 +18,19 @@ spec:
         app: minio1
     spec:
       # Volumes used by this deployment
-#      volumes:
-#        - name: data
-#          # This volume is based on PVC
-#          persistentVolumeClaim:
-#            # Name of the PVC created earlier
-#            claimName: minio-pv-claim
+      volumes:
+        - name: data
+          # This volume is based on PVC
+          persistentVolumeClaim:
+            # Name of the PVC created earlier
+             claimName: minio-pv-claim
       containers:
         - name: minio1
           # Volume mounts for this container
-#          volumeMounts:
-#            # Volume 'data' is mounted to path '/data'
-#            - name: data
-#              mountPath: "/data"
+          volumeMounts:
+            # Volume 'data' is mounted to path '/data'
+            - name: data
+              mountPath: "/data"
           # Pulls the lastest Minio image from Docker Hub
           image: minio/minio:RELEASE.2020-05-01T22-19-14Z
           args:
