--- a/setup/flink-kubernetes/server/adaptor-server/templates/deployment.yaml
+++ b/setup/flink-kubernetes/server/adaptor-server/templates/deployment.yaml
@@ -38,7 +38,7 @@ spec:
               value: {{ .value }}
             {{- end }}
           command: [ "/bin/sh" ]
-          args: ["-c", "java -jar server/target/server.jar -c configs/config.json -Dmaven.home=/root/.m2" ]
+          args: ["-c", "java -jar server/target/server.jar -c configs/config.json -Dmaven.home=/root/.m2 -Djava.rmi.server.hostname=127.0.0.1 -Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.port=1099 -Dcom.sun.management.jmxremote.rmi.port=1099 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false" ]
           volumeMounts:
             - mountPath: /usr/share/app/iudx-adaptor-framework/configs/
               name: server-configmap
@@ -46,6 +46,8 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+            - name: jmx
+              containerPort: 9010
 #          livenessProbe:
 #            httpGet:
 #              path: /
