--- a/setup/flink-kubernetes/server/jmx-service.yaml
+++ b/setup/flink-kubernetes/server/jmx-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   # This name uniquely identifies the service
-  name: minio1
+  name: adaptor-server-jmx
 spec:
   type: NodePort
   ports:
-    - port: 9000
-      targetPort: 9000
-      nodePort: 30005
+    - port: 1099
+      targetPort: 1099
+      nodePort: 30006
   selector:
     # Looks for labels `app:minio1` in the namespace and applies the spec
-    app: minio1
+    app.kubernetes.io/name: adaptor-server
